Started adding React

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Michaela Arteberry</title>
+</head>
+
+<body>
+    <h1>Welcome to my Portfolio!</h1>
+    <p>Here's a picture of a kitten:</p>
+    <img src="kitten.jpg" alt="A cute kitten">
+</body>
